# PyTiRiFiC

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile.dev  HISTORY.rst  MANIFEST.in  README.md  README.rst  gmake_amoeba.py  gmake_emcee.py  gmake_emcee_analyze.py  gmake_example.py  gmake_examples.py  gmake_fit.py  gmake_gravity.py  gmake_init.py  gmake_kinmspy.py  gmake_lmfit.py  gmake_model.py  gmake_model_func.py  gmake_model_func_kinms.py  gmake_model_uv.py  gmake_model_xy.py  gmake_mpfit.py  gmake_plots.py  gmake_plotxy.pro  gmake_run.py  gmake_test.py  gmake_utils.py  macos_quickinstall.md  requirements_casa6pip36.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  test_gmake.py  (+1 more)
.github/: ISSUE_TEMPLATE.md
benchmarks/: readme.md
dependencies/: casacore.md  casatools_whl_cp36to37_macos.py  galario.md  numexpr3.md  python-casacore.md  readme.md
docs/: Makefile  index.html  readme.md
docs/d811bb3037aca6a6b0e0ea7bbca033e2e396f67c/: authors.html  casa6.html  changlog.html  genindex.html  gmake.html  history.html  index.html  inpfile.html  install.html  installation.html  misc.html  modules.html  nextsteps.html  objects.inv  options.html  par_def.html  py-modindex.html  quickstart.html  readme.html  search.html  searchindex.js  test_index.html  todo.html  updating.html  usage.html
docs/ms/: ms-hzdyn-toolkit.tex  ms-hzdyn.bib  ms-hzdyn.tex
docs/notes/: casacore.md  galario.md  python-casacore.md
docs/source/: casa6.rst  conf.py  gmake.rst  gmake.tests.rst.old  index.rst  inpfile.rst  install.rst  installation.rst  latex.rst  misc.rst  modules.rst  par_def.rst  quickstart.rst  sp-ism3d.bib  theme.css  todo.rst  usage.rst
docs/statics/: authors.html  genindex.html  history.html  index.html  latex.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
examples/: README.md  cli_example.bash  hz_examples.py  nb_examples.py  pp_examples.py
examples/bx610/: bx610.inp  bx610uv.inp  bx610xy.inp  bx610xy_all.inp  bx610xy_backup.inp  bx610xy_band4_cm64_all.inp  bx610xy_band4_dm128_b1234_amoeba.inp  bx610xy_cm105_cont.inp  bx610xy_cm64_all.inp  bx610xy_cm_cont.inp  bx610xy_cont.inp  bx610xy_dm105_all.inp  bx610xy_dm105_cont.inp  bx610xy_dm64_all.inp  bx610xy_dm_all.inp  bx610xy_dm_all_test.inp  bx610xy_dm_cont.inp  bx610xy_line.inp  bx610xy_nas_dm128_b1234_amoeba.inp  bx610xy_test.inp  uvb6_ab.inp  uvb6_lmbt.inp  xyb46dm128_ab.inp  xyb46dm128rc_ab.inp  xyb4dm128_ab.inp  xyb4dm128ab.inp  xyb4dm128ab_rc.inp  xyb4dm128rc_ab.inp  xyb6dm128ab.inp  xyb6dm128ab_rc.inp  xysf_k_ab.inp
examples/data/: README.md
examples/inpfile/: bx610_b4c5_uv_mc.inp  bx610_b6c3_uv_ab.inp  bx610_b6c3_uv_mc.inp  bx610_band6_uv_ab.inp  bx610_test_rc.inp  bx610_uvb6_ab.inp  bx610_xyb4dm128_lmbt.inp  bx610_xyb4dm128_lmnd.inp  bx610_xyb4dm128rc_ab.inp  bx610_xyb6dm128_ab.inp  bx610_xyb6dm128_lmnd.inp  bx610_xyb6dm128rc_ab.inp  bx610_xysf_ab.inp  bx610_xysf_k_ab.1.inp  bx610_xysf_k_ab.2.inp  bx610_xysf_k_ab.cfg  disk3d_simulate.inp  hxmm01_b6c3_uv_mc.inp
examples/notebook/: basic_demo.ipynb  basic_demo_amoeba.ipynb  basic_demo_emcee.ipynb  basic_demo_simulate.ipynb  demo_bx610_amoeba.ipynb  demo_bx610_emcee.ipynb  demo_bx610_prep.ipynb  demo_hxmm01.ipynb  (+8 more)
gmake/: __init__.py  add_col.py  amoeba_sa.py  analyze.py  arr_test.py  cli.py  config.yaml  default.cfg  discretize.py  discretizer.py  evaluate.py  fit_amoeba.py  fit_emcee.py  fit_lmfit.py  fit_mpfit.py  fit_utils.py  gmake_amoeba.py  gmake_cli.py  gmake_emcee.py  gmake_fit.py  gmake_gravity.py  gmake_init.py  gmake_lmfit.py  gmake_logger.py  gmake_model.py  gmake_model_func.py  gmake_model_func_dynamics.py  gmake_model_func_kinms.py  gmake_mpfit.py  gmake_plots.py  gmake_test.py  gmake_utils.py  gmake_uvamp.py  io.py  io_utils.py  logger.py  meta.py  model.py  model_build.py  model_build2.py  (+27 more)
ism3d/: __init__.py  cli.py  interface.py  logger.py
obselete/: gmake_obselete.py  test_gpyfft.py  test_reikna.py  test_reikna_fftn.py
tests/: __init__.py  test_ism3d.py
tmp/: py_tirific_analyze.py  py_tirific_analyze_run.py  py_tirific_diskmod.py  py_tirific_fun.py  py_tirific_makepsf.py  py_tirific_mc_run.py  py_tirific_mc_setup.py  py_tirific_mc_setup_hxmm01.py
(+1798 files in other folders)
