[metadata]

name = GMaKE
version = 0.2.dev1
description = Galaxy Morphology and Kinematics Estimator
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/rst; charset=UTF-8
                 
author = Rui Xue 
license = MIT
license_files = LICENSE

keywords = Galaxy Dynamics
author_email = rx.astro@gmail.com
classifiers = 
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Astronomy
    
url = http://github.com/r-xue/gmake
project_urls =
    Bug Reports = https://github.com/r-xue/gmake/issues
    Source = https://github.com/r-xue/gmake


[options]

zip_safe = False
include_package_data = True
python_requires = >= 3.7, < 4
packages = find:

install_requires =
    
    astropy >= 3.2.2
    
    emcee >= 3.0.0
    corner >= 2.0
    tqdm
    lmfit
    
    asteval >= 0.9.14
    numexpr >= 2.7.0

    hickle
    
    alpy
    regions
    scipy
    reproject
    
    python-casacore >= 3.1.1
    scikit-image
    galpy
    mkl-fft
    #galario >=0.0    
    #reikna; yt; fitsio; fits-tools
    
    pvextractor >= 0.2.dev327
    spectral-cube >= 0.4.5.dev
    radio-beam >= 0.3
    reproject >= 0.6.dev
    
    casa-proc

[options.extras_require]


[options.entry_points]

console_scripts = 
    gmake_cli = gmake.gmake_cli:main


[bdist_wheel]

universal=1

#dependency_links=[
#    'https://github.com/IntelPython/mkl_fft/archive/v1.0.14.zip',]
