[bumpversion]
current_version = 0.3.dev1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:ism3d/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']


[options]

zip_safe = False
include_package_data = True
python_requires = >= 3.7, < 4
packages = find:

install_requires =

    astropy >= 4.0

    emcee >= 3.0.0
    corner >= 2.0
    tqdm
    lmfit

    asteval >= 0.9.14
    numexpr >= 2.6.9

    hickle >= 4.0.0
    pyfftw

    alpy
    regions
    scipy
    reproject

    #python-casacore >= 3.1.1
    scikit-image
    galpy >=1.5
    #mkl-fft
    #galario >=0.0
    #reikna; yt; fitsio; fits-tools

    pvextractor >= 0.2.dev66
    spectral-cube >= 0.4.5.dev
    radio-beam >= 0.3
    reproject >= 0.6.dev
    fast-histogram >= 0.7

    #casa-proc

[options.extras_require]

[options.entry_points]

console_scripts =
    gmake_cli = gmake.cli:main

#dependency_links=[
#    'https://github.com/IntelPython/mkl_fft/archive/v1.0.14.zip',]
