[bumpversion]
current_version = 0.3.dev1
commit = False
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)(\.(?P<release>[a-z]+)(?P<dev>\d+))?
serialize = 
    {major}.{minor}.{release}{dev}
    {major}.{minor}
    
[bumpversion:part:release]
optional_value = gamma
values = 
    dev
    gamma    

[bumpversion:part:dev]

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:ism3d/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:docs/source/conf.py]
search = release = '{current_version}'
replace = release = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']


[options]

zip_safe = False
include_package_data = True
python_requires = >= 3.7, < 4
packages = find:

install_requires =

    astropy >= 4.0
    scipy
    emcee >= 3.0.0
    corner >= 2.0

    asteval >= 0.9.14
    numexpr >= 2.6.9

    hickle >= 4.0.0
    pyfftw
    
    fast-histogram >= 0.9


#[options.extras_require]

#[options.entry_points]

#console_scripts =
#    gmake_cli = gmake.cli:main

#dependency_links=[
#    'https://github.com/IntelPython/mkl_fft/archive/v1.0.14.zip',]
